Modify footer in base template

--- a/main/templates/main/__base.html
+++ b/main/templates/main/__base.html
@@ -107,7 +107,7 @@
             <div class="footer">
                 {% block footer %}
                 <p>
-                    &copy; {% now "Y" %} MyProjectManager by Brittaney
+                    &copy; {% now "Y" %} MyProjectManager by Brittaney Lopez
                 </p>
                 {% endblock %}
             </div>
