--- a/main/templates/main/__base.html
+++ b/main/templates/main/__base.html
@@ -66,7 +66,7 @@
                             <a href="">All Opportunities</a>
                         </li>
                         <li>
-                            <a href="">Create Opportunity</a>
+                            <a href="{%url 'projects:add_project' %}">Create Opportunity</a>
                         </li>
                         <li>
                             <a href="">Bid Sheets</a>
