--- a/static/main/css/__base.css
+++ b/static/main/css/__base.css
@@ -72,7 +72,7 @@ body,
 }
 
 .header_links a:hover {
-    color: #a5a5a5;
+    color: #fff;
     font-weight: 500;
     letter-spacing: 2px;
 }
@@ -120,7 +120,7 @@ body,
 }
 
 .sub_nav_button:hover>a {
-    color: #7e7e7e;
+    color: #fff;
     font-weight: 700;
     text-shadow: 1px 1px 10px #a5a5a5;
 }
@@ -172,21 +172,37 @@ body,
 .overview_container {
     /* border: 1px solid #ddd; */
     width: 100%;
+    height: 100%;
+    text-transform: uppercase;
 }
 
-.project_count_container {
-    width: 100%;
+.overview {
+    /* border: 1px solid pink; */
+}
+
+.overview_item_value {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 0 20px;
-    margin-top: 10px;
-    margin-bottom: 5px;
-    text-transform: uppercase;
-    font-weight: 100;
+    padding: 10px 20px;
+    border-bottom: 1px solid #ddd;
 }
 
-.project_work_orders_container {
-    clear: both;
+.overview_item_value p {
+    /* The width will be an equal percentage of the parent container */
+    width: 33.33%;
+    font-weight: 100;
+    overflow: auto;
+}
+
+.overview_item_value a {
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.overview_header p {
+    font-weight: 700;
+    text-transform: uppercase;
 }
