Add/remove labor/travel hours and travel expenses

--- a/main/templates/main/__base.html
+++ b/main/templates/main/__base.html
@@ -69,7 +69,7 @@
                             <a href="{%url 'projects:add_project' %}">Create Opportunity</a>
                         </li>
                         <li>
-                            <a href="">Bid Sheets</a>
+                            <a href="{% url 'bid:index' %}">Bid Sheets</a>
                         </li>
                         <li>
                             <a href="">Proposal Template</a>
