Adjust solution to have bid materials selected on different page

--- a/bid/templates/bid/index.html
+++ b/bid/templates/bid/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="bid_body">
         <div class="bid_body_left">
-            <p>Site Count: {{ site_count }}</p>
+            <p>Site Count: ({{ bid.bid_project.project_sites.count }})</p>
             <!-- <p>Job Type: {{ bid.job.job_type }}</p> -->
             <!-- <p>Job Status: {{ bid.job.job_status }}</p> -->
             <!-- <p>Job Priority: {{ bid.job.job_priority }}</p> -->
