--- a/bid/templates/bid/bid_details.html
+++ b/bid/templates/bid/bid_details.html
@@ -75,43 +75,63 @@
     <button type="button" id="add_travel_expense">Add Travel Expense Entry</button>
     <button type="button" id="remove_travel_expense">Remove Last Travel Expense Entry</button>
 
-    <h3>Materials</h3>
-    <div class="bid_materials">
+    <!-- <h3>Materials</h3>
+    <div class="bid_materials"> -->
 
-        <div class="row">
+    <!-- <div class="row">
             <div class="col-md-5">
-                <label>Available Materials</label>
-                <input type="text" id="search_material" placeholder="Search for Material..." />
-                <select id="available_materials" size="10" multiple style="width:100%;">
-                    {% for material in all_materials %}
-                    <option value="{{ material.material_id }}">
-                        ({{ material.manufacturer }}) {{ material.description }}
-                    </option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="col-md-2 d-flex align-items-center">
-                <div>
-                    <button type="button" id="include_material">Include</button>
-                    <button type="button" id="exclude_material">Exclude</button>
-                </div>
-            </div>
-            <div class="col-md-5">
-                <label>Selected Materials</label>
-                <input type="text" id="search_selected_material" placeholder="Search for Material..." />
-                <select id="selected_materials" size="10" multiple style="width:100%;">
-                    {% for material in bid_materials %}
-                    <option value="{{ material.material_id }}">
-                        ({{ material.manufacturer }}) {{ material.description }}
-                    </option>
-                    {% endfor %}
-                </select>
+                <label>Add Based on Project</label><br>
+                <button type="button" id="new_warehouse_items">New Warehouse</button>
+                <button type="button" id="tech_refresh_items">IMAC Tech Refresh</button>
             </div>
         </div>
 
-    </div>
+        <div class="row">
+            <div class="col-md-5">
+                <label>Filter by Manufacturer</label><br>
+                <select id="manufacturer_filter" style="width:200px;">
+                    <option value="">All Manufacturers</option>
+                    {% for manufacturer in unique_manufacturers %}
+                    <option value="{{ manufacturer }}">
+                        {{ manufacturer }}
+                    </option>
+                    {% endfor %}
+                </select>
+            </div>
+        </div> -->
+
+    <!-- <div class="material_selections_container"> -->
+
+    <!-- <select id="available_materials" size="10" multiple style="width: 450px;">
+                {% for material in all_materials %}
+                <option value="{{ material.material_id }}">
+                    {{ material.manufacturer }} | {{ material.description }}
+                </option>
+                {% endfor %}
+            </select>
+            <div class="material_selection_buttons">
+                <button id="include_material">Include</button>
+                <button id="exclude_material">Exclude</button>
+            </div>
+            <select id="selected_materials" size="10" multiple style="width: 450px;">
+                {% for material in bid_materials %}
+                <option value="{{ material.material_id }}">
+                    {{ material.manufacturer }} | {{ material.description }}
+                </option>
+                {% endfor %}
+            </select> -->
+
+    <!-- </div> -->
+
+    <!-- </div> -->
 
 
     <input type="submit" value="Save" />
-</form>
-{% endblock %}
+    <!-- </form>
+<div class="col-md-2 d-flex align-items-center">
+    <div class="add_material_modal" class="modal">
+        <small>Can't Find What You're Looking For?</small><br>
+        {% include 'materials/add_material.html' %}
+    </div>
+</div> -->
+    {% endblock %}
