--- a/main/static/main/css/__base.css
+++ b/main/static/main/css/__base.css
@@ -22,6 +22,8 @@ body,
 .content {
     width: 100%;
     height: 100%;
+    padding: 0 10px;
+    margin-bottom: 20px;
 }
 
 .welcome_container {
@@ -157,9 +159,12 @@ body,
     width: 100%;
     height: 20px;
     background-color: #f5f5f5;
-    display: flex;
+    /* display: flex; */
+    /* TEMPORARILY NOT DISPLAYING FOOTER */
+    display: none;
     justify-content: center;
     align-items: center;
+    margin-top: 30px;
 }
 
 .footer p {
