--- a/bid/templates/bid/index.html
+++ b/bid/templates/bid/index.html
@@ -8,33 +8,27 @@
 {% endblock %}
 {% block content %}
 
-
-{% for bid in bids_draft %}
+<h3>Generated Bids</h3>
+{% for bid in bids_generated %}
 <div class="bid">
     <div class="bid_header">
         <a href="{% url 'bid:bid_details' bid.pk %}">
-            <h2>Project : {{ bid.bid_project.project_name }} </h2>
+            <h4>
+                {{ bid.bid_project.project_number }}
+            </h4>
         </a>
-        <p><b>Status : </b>{{ bid.bid_status }}</p>
+        <h4>Project : {{ bid.bid_project.project_name }}</h4>
     </div>
     <div class="bid_body">
         <div class="bid_body_left">
-            <p>Site Count: ({{ bid.bid_project.project_sites.count }})</p>
-            <!-- <p>Job Type: {{ bid.job.job_type }}</p> -->
-            <!-- <p>Job Status: {{ bid.job.job_status }}</p> -->
-            <!-- <p>Job Priority: {{ bid.job.job_priority }}</p> -->
-            <!-- <p>Job Location: {{ bid.job.job_location }}</p> -->
-            <!-- <p>Job Description: {{ bid.job.description }}</p> -->
+            <p><b>Bid Type : </b>{{ bid.bid_type }}</p>
+            <p><b>Status : </b>{{ bid.bid_status }}</p>
+            <p><b>Site Count: </b> ({{ bid.bid_project.project_sites.count }})</p>
+            {% if bid.bid_due_date and bid.bid_due_time %}
+            <p><b>Due : </b>{{ bid.bid_due_date }} at {{ bid.bid_due_time|date:"g:i A" }}</p>
+            {% endif %}
         </div>
-        <div class="bid_body_right">
-            <!-- <p>Job Number: {{ bid.job.job_number }}</p>
-            <p>Job Type: {{ bid.job.job_type }}</p>
-            <p>Job Status: {{ bid.job.job_status }}</p>
-            <p>Job Priority: {{ bid.job.job_priority }}</p>
-            <p>Job Location: {{ bid.job.job_location }}</p>
-            <p>Job Description: {{ bid.job.description }}</p> -->
-        </div>
-    </div>
+    </div><br>
 </div>
 {% endfor %}
 {% endblock %}
