--- a/static/bid/css/bid.css
+++ b/static/bid/css/bid.css
@@ -1,8 +1,5 @@
 @charset "utf-8";
 
-.bid {
-    /* border: 1px solid #ddd; */
-}
 
 .bid_item {
     display: flex;
@@ -11,4 +8,11 @@
     align-items: center;
     padding: 10px 20px;
     border-bottom: 1px solid #ddd;
+}
+
+.scrollable {
+    max-height: 300px;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    padding: 10px;
 }
