--- a/bid/templates/bid/bid_details.html
+++ b/bid/templates/bid/bid_details.html
@@ -78,11 +78,6 @@
 
 
     <input type="submit" value="Save" />
-    <!-- </form>
-<div class="col-md-2 d-flex align-items-center">
-    <div class="add_material_modal" class="modal">
-        <small>Can't Find What You're Looking For?</small><br>
-        {% include 'materials/add_material.html' %}
-    </div>
-</div> -->
-    {% endblock %}
+</form>
+
+{% endblock %}
