--- a/bid/templates/bid/bid_details_equipment.html
+++ b/bid/templates/bid/bid_details_equipment.html
@@ -1,1 +1,34 @@
-Bid Details Equipment
+{% extends 'main/__base.html' %}
+{% block subtitle %} | Equipment for {{ bid.bid_project.project_name }} {% endblock %}
+{% load static %}
+{% block styles %}
+{% endblock %}
+{% block scripts %}
+{% endblock %}
+{% block content %}
+
+<h1>Equipment for {{ bid.bid_project.project_name }}</h1>
+
+<!-- Add a way for the user to navigate to the previous page (bid/bid_details_material.html) -->
+<a href="{% url 'bid:bid_details_material' bid.bid_id %}">Back to Material</a>
+
+<!-- Add a way for the user to navigate to the labor/travel page (bid/bid_details.html) -->
+<a href="{% url 'bid:bid_details' bid.bid_id %}">Back to Labor / Travel</a>
+
+<p>
+    Site Count : ({{ bid.bid_project.project_sites.count }})
+</p>
+{% for site in bid.bid_project.project_sites.all %}
+<small>
+    {{ site.site_id }} {{ site.site_name }}<br>
+    {{ site.address }},
+    {{ site.city }} {{ site.state }} {{ site.zip_code }}
+    {% if site.phone %}
+    <br>Phone: ({{ site.phone|slice:":3" }}) {{ site.phone|slice:"3:6" }}-{{ site.phone|slice:"6:10" }}
+    {% endif %}
+</small>
+{% endfor %}
+
+
+
+{% endblock %}
